--- a/gmlib_qmldemo_01/report/Advanced.Game-.and.Simulator.Programming.tex
+++ b/gmlib_qmldemo_01/report/Advanced.Game-.and.Simulator.Programming.tex
@@ -418,7 +418,7 @@ This class to define the ball.The properties of the ball included
 \end{tabular}
 \end{table}
 
-\begin{table}[]
+\begin{table}[H]
 \centering
 \caption{Functions of the Testsphere}
 \label{my-label}
